# g4datadw

./: README.md  pyproject.toml  scraper.sh
src/g4dsdw/: __init__.py  __main__.py  cli.py  config.py  database.py  installer.py  lister.py  paths.py
src/g4dsdw/private/: singleton.py
tests/: test_database.py
